# fastapi-react

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  compose.langfuse.yml  compose.override.yml  compose.traefik.yml  compose.yml  copier.yml  deployment.md  development.md  pyproject.toml
.github/: labeler.yml  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1a31ce608336_add_cascade_delete_relationships.py  a4f3c2d1e0b9_rename_user_email_to_username.py  e2412789c190_initialize_models.py
backend/app/: backend_pre_start.py  crud.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 9c0a54914c78_add_max_length_for_string_varchar_.py  d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py  fe56fa70289e_add_created_at_to_user_and_item.py
backend/app/api/: dependencies.py  deps.py  exception_handlers.py  router.py
backend/app/api/routes/: items.py  login.py  private.py  users.py  utils.py
backend/app/bootstrap/: initial_data.py
backend/app/common/: exceptions.py
backend/app/core/: config.py  db.py  security.py
backend/app/db/: initial_data.py  models.py
backend/scripts/: format.sh  initial_data.py  lint.sh  prestart.py  prestart.sh  tests-start.sh
backend/tests/: conftest.py
backend/tests/auth/: test_router.py  test_service.py
backend/tests/crud/: test_user.py
backend/tests/items/: test_router.py
backend/tests/scripts/: test_prestart.py
backend/tests/support/: data.py  items.py  users.py
backend/tests/system/: test_router.py
backend/tests/users/: test_private_router.py  test_router.py  test_service.py
(+122 files in other folders)
