[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi>=0.138.1,<1.0.0",
    "uvicorn[standard]>=0.49.0,<1.0.0",
    "python-multipart<1.0.0,>=0.0.27",
    "tenacity<10.0.0,>=8.2.3",
    "pydantic>2.0",
    "alembic<2.0.0,>=1.12.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel>=0.0.39,<1.0.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt<3.0.0,>=2.13.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "scalar-fastapi>=1.0.0",
    "deepagents>=0.6.10,<0.7.0",
    "langchain-deepseek>=1.0.0,<2.0.0",
    "langchain-mcp-adapters>=0.3.0,<1.0.0",
    "langfuse>=4,<5",
    "langgraph-checkpoint-postgres>=3,<4",
    "assistant-stream>=0.0.34,<0.1.0",
]

[dependency-groups]
dev = [
    "mypy<3.0.0,>=1.8.0",
    "ty>=0.0.25",
    "ruff<1.0.0,>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic/versions"]

[tool.ruff]
target-version = "py314"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle 错误
    "W",  # pycodestyle 警告
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # 函数中存在未使用的参数
    "T201",   # 不允许使用 print 语句
]
ignore = [
    "E501",  # 行过长，由格式化工具处理
    "B008",  # 不要在参数默认值中调用函数
    "W191",  # 缩进中包含制表符
    "B904",  # 允许 HTTPException 不使用 from e 直接抛出
]

[tool.ruff.lint.pyupgrade]
# 即使文件导入了 `from __future__ import annotations`，也保留运行时类型。
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true
